static/style.css
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
	flex: 1 0 auto;
}

#input-block {
	overflow: hidden;
}

#navigation-container {
	float: right;
	width: 150px;
}

#page-title {
	float: left;
}

#page-title #title {
	font-size: 25px;
	margin-top: 10px;
	margin-bottom: 0px;
}

#page-title #subtitle {
	margin-top: 0px;
	font-size: 14px;
	opacity: 0.6;
}

.tabs {
	background-color: transparent;
}

.tabs .tab {
	
}

.tabs .tab a:hover {
    color: #f9f9f9; 
}

.tabs .tab a {
    color: #fff;
}

.tabs .indicator {
	background-color: #fff;
}

#input-content {
	padding-top: 7px;
	padding-bottom: 5px;
}

#main-container {
	margin-top: 20px;
	display: block;
	position: relative;
}

#about-container {
	display: none;
	margin-top: 20px;
}

#about-card {
	padding: 30px;
}

#welcome-card-container {
	visibility: visible;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
}

#result-card-container {
	visibility: hidden;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
}

#error-card-container {
	visibility: hidden;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
}

#progress-card-container {
	visibility: hidden;
	margin-top: 7%;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
}

#progress-message {
    text-align: center;
}

#progress-card-container .progress {
	background-color: #1e88e5;
}

#progress-card-container .indeterminate {
	background-color: #bbdefb;
}

#result-card {
	padding: 10px;
}

.card-container {
	margin-bottom: 90px;
}

.result-card-header-container {
	display: inline-block;
}

.result-card-header {
	font-size: 15px;
	margin-top: 0;
	display: table-cell;
}

.result-card-header-buttons-container {
	float: right;
}

.result-card-header-buttons-container p {
	margin-top: 1px;
	margin-right: 7px;
	float: left;
}

.result-card-header-buttons-container a {
	color: #1E88E5 !important;
}

.result-card-header-button {
	float: left;
}

#show_badges_button {
	margin-right: 7px;
}

#result-library-stats {
	display: table;
    width: 100%;
    table-layout: fixed;
}

#result-dependency-summary {
	display: table;
    width: 100%;
    table-layout: fixed;	
}

#result-card-header-share {
	margin-left: 20px;
}

#result-lib-name {
	font-size: medium;
}

#result-card-dep-list {
	display: none;
}

#result-card-dep-list-title {
    margin-bottom: 0;
    margin-top: 10;
}

#shadow-container {
	height: 2px;
}

.indent-right {
	margin-left: 20px;	
}

#badge-dropdown-title {
	font-weight: bold;
	font-size: 18px;
}

#share-dropdown-gplus {
	margin-top: 10px;
}

#share-dropdown-link {
	margin-top: 10px;	
}

#share-dropdown-link pre {
	margin-top: 0;
	margin-bottom: 0;
}

th {
	font-weight: normal;
	padding-left: 0px;
}

td {
	padding-left: 20px;
}

#search-box {
	width: 100%;
	line-height: normal;
    padding: 10px;
    margin-bottom: 0px;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

#search-button {
	position: absolute;
	right: 0;
	top: 5px;
    font-size: 30px;
    margin-right: 8px;
}

#output-block {
	margin-top: 10px;
}

.about-paragraph {
	font-size: 17px;
}

.input-field input[type=text] {
	border: 0px solid #000;
    box-shadow: 0 0px 0 0 #000;
}

.input-field input[type=text]:focus {
	border: 0px solid #000;
    box-shadow: 0 0px 0 0 #000;
}

.easy-autocomplete {
	width: 100% !important;
}

.hoverable {
	margin-top: 0 !important;
}

.page-footer {
	position: fixed;
	width: 100%;
	bottom: 0px;
}

#footer-social-buttons {
	margin-top: 4px;
}

#copyright-container {
    display: inline-block;
    float: left;
}

.copyright-row-container {
	float: left;
	margin-top: 8px;
}

#copyright-row-year {
	width: 100%;
	margin-top: 12px;
}

#copyright-row-year p {
	text-align: right;
	margin-top: 6px;
}

#copyright-row-people {
	margin-left: 10px;
}

#copyright-row-people #sebastiano {
	float: left;
}

#copyright-row-people #nicola {
	float: left;
	margin-top: 4px;
}

#copyright-row-people .social {
	margin-left: 6px;
	margin-top: -3px;
	width: 20px;
	float: left;
}

#copyright-row-people #nicola-container .social {
	margin-top: 2px;
}

.copyright-row {
	margin-top: 0;
	margin-bottom: 0;
	padding: 0;
	line-height: 14px;
}

#gde-badge-container {
	float: left;
	margin-left: 7px;
    margin-top: 6px;
}

#gde-badge {
	width: 40px;
	height: 40px;
}

#share-dropdown-twitter {
	float: left;
	margin-right: 10px;
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }

.material-icons.md-light { color: rgba(255, 255, 255, 1); }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }

.material-icons.turquoise { color: #64dee4; }

